# claude-autonomous-engineer

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  SUMMARY.md  build.rs  init.sh
.claude/: CLAUDE.md  settings-local.json  settings.json
.claude/agents/: code-executor.md  codex-reviewer.md  project-architect-supervisor.md
.claude/hooks/: code_digest.py  codex_review_gate.py  error_tracker.py  guardrail_commit.py  inject_state.py  inject_state_v2.py  loop_driver.py  loop_driver_v2.py  post_write_update.py  pre_write_check.py
.claude/status/: memory.json.template  state.json
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/: 新规划.md
embedded/agents/: code-executor.md  codex-reviewer.md  project-architect-supervisor.md  story-generator.md  visual-designer.md
embedded/templates/: CLAUDE.md  memory.json  settings.json
new.claude/agents/: prd-generator.md  project-architect-supervisor.md
new.claude/hooks/: codex_review_gate.py  inject_state.py  loop_driver.py  progress_sync.py  run_hook.py  run_hook.sh
new.claude/lib/: context_manager.py
new.claude/status/: memory.json
src/: lib.rs  main.rs
src/cli/: mod.rs  state.rs
src/context/: builder.rs  contract.rs  errors.rs  manager.rs  memory.rs  mod.rs  roadmap.rs  structure.rs  truncate.rs  types.rs
src/hooks/: claude_protocol.rs  codex_executor.rs  codex_resolver.rs  codex_review.rs  codex_review_gate.rs  error_tracker.rs  inject_state.rs  loop_driver.rs  mod.rs  progress_sync.rs  repo_map_sync.rs  review_context.rs  review_parser.rs  runner.rs  state_tracker.rs
src/project/: initializer.rs  mod.rs  root_finder.rs
src/repo_map/: cache.rs  extractor.rs  generator.rs  generator_toon.rs  mod.rs  parser.rs  service.rs
src/repo_map/languages/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/state/: mod.rs  models.rs  parser.rs  sync.rs
src/state_machine/: git_state.rs  hooks.rs  mod.rs  visualizer.rs  workflow.rs
src/templates/: agents.rs  files.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  terminal.rs
src/tui/pty/: manager.rs  mod.rs
src/tui/ui/: context_panel.rs  layout.rs  mod.rs  status_bar.rs  terminal_view.rs
src/utils/: format.rs  fs.rs  git.rs  json.rs  mod.rs  project_root.rs
src/watcher/: mod.rs
