[package]
name = "claude-autonomous"
version = "1.0.0"
edition = "2021"
description = "Claude Autonomous Engineering CLI - Hook runner and project initializer"
authors = ["Your Name"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
colored = "2.0"
dirs = "5.0"
walkdir = "2.5"          # 文件遍历
regex = "1.10"           # 正则表达式
once_cell = "1.19"       # 懒加载静态变量
chrono = "0.4"           # 时间处理

[profile.release]
opt-level = "z"
lto = true
strip = true
