[package]
name = "claude-autonomous"
version = "1.0.0"
edition = "2021"
description = "Claude Autonomous Engineering CLI - Complete Rust implementation"
authors = ["Your Name <email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/claude-autonomous-engineer"
readme = "README.md"
keywords = ["claude", "autonomous", "engineering", "cli", "hooks"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "claude-autonomous"
path = "src/main.rs"

[lib]
name = "claude_autonomous"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 工具
regex = "1.10"
lazy_static = "1.5"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
dirs = "5.0"

# 资源嵌入
rust-embed = "8.9"

[profile.release]
opt-level = "z"        # 优化大小
lto = true             # 链接时优化
strip = true           # 去除符号
codegen-units = 1      # 更好的优化
panic = "abort"        # 减小二进制大小

[dev-dependencies]
tempfile = "3.10"      # 测试用临时文件
assert_cmd = "2.0"     # CLI 测试
predicates = "3.1"     # 测试断言
